# docs/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_models.UserCreateRequest"
+                            "$ref": "#/definitions/models.UserCreateRequest"
                         }
                     }
                 ],
@@ -42,13 +42,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                                    "$ref": "#/definitions/util.APIResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/voca-test_internal_models.User"
+                                            "$ref": "#/definitions/models.User"
                                         }
                                     }
                                 }
@@ -58,13 +58,13 @@
                     "400": {
                         "description": "Invalid request body or validation error",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     }
                 }
@@ -90,7 +90,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_models.WalletCreateRequest"
+                            "$ref": "#/definitions/models.WalletCreateRequest"
                         }
                     }
                 ],
@@ -100,13 +100,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                                    "$ref": "#/definitions/util.APIResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/voca-test_internal_models.Wallet"
+                                            "$ref": "#/definitions/models.Wallet"
                                         }
                                     }
                                 }
@@ -116,13 +116,13 @@
                     "400": {
                         "description": "Invalid request body or validation error",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     }
                 }
@@ -148,7 +148,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_models.TransferRequest"
+                            "$ref": "#/definitions/models.TransferRequest"
                         }
                     }
                 ],
@@ -156,19 +156,19 @@
                     "200": {
                         "description": "Transfer successful",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "400": {
                         "description": "Invalid request, currency mismatch, or insufficient balance",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     }
                 }
@@ -202,13 +202,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                                    "$ref": "#/definitions/util.APIResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/voca-test_internal_models.Wallet"
+                                            "$ref": "#/definitions/models.Wallet"
                                         }
                                     }
                                 }
@@ -218,19 +218,19 @@
                     "400": {
                         "description": "Invalid wallet ID",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "404": {
                         "description": "Wallet not found",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     }
                 }
@@ -263,7 +263,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_models.PaymentRequest"
+                            "$ref": "#/definitions/models.PaymentRequest"
                         }
                     }
                 ],
@@ -273,13 +273,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                                    "$ref": "#/definitions/util.APIResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/voca-test_internal_models.Wallet"
+                                            "$ref": "#/definitions/models.Wallet"
                                         }
                                     }
                                 }
@@ -289,13 +289,13 @@
                     "400": {
                         "description": "Invalid request body, insufficient balance, or wallet ID",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     }
                 }
@@ -327,19 +327,19 @@
                     "200": {
                         "description": "Wallet suspended successfully",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "400": {
                         "description": "Invalid wallet ID",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     }
                 }
@@ -372,7 +372,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_models.TopUpRequest"
+                            "$ref": "#/definitions/models.TopUpRequest"
                         }
                     }
                 ],
@@ -382,13 +382,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                                    "$ref": "#/definitions/util.APIResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/voca-test_internal_models.Wallet"
+                                            "$ref": "#/definitions/models.Wallet"
                                         }
                                     }
                                 }
@@ -398,13 +398,13 @@
                     "400": {
                         "description": "Invalid request body or wallet ID",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     }
                 }
@@ -430,6 +430,20 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Items per page",
+                        "name": "per_page",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -438,7 +452,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                                    "$ref": "#/definitions/util.APIResponse"
                                 },
                                 {
                                     "type": "object",
@@ -446,8 +460,11 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/voca-test_internal_models.LedgerEntry"
+                                                "$ref": "#/definitions/models.LedgerEntry"
                                             }
+                                        },
+                                        "meta": {
+                                            "$ref": "#/definitions/util.PaginationMeta"
                                         }
                                     }
                                 }
@@ -457,13 +474,13 @@
                     "400": {
                         "description": "Invalid wallet ID",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/voca-test_internal_util.APIResponse"
+                            "$ref": "#/definitions/util.APIResponse"
                         }
                     }
                 }
@@ -471,7 +488,7 @@
         }
     },
     "definitions": {
-        "voca-test_internal_models.LedgerEntry": {
+        "models.LedgerEntry": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -501,7 +518,7 @@
                 }
             }
         },
-        "voca-test_internal_models.PaymentRequest": {
+        "models.PaymentRequest": {
             "type": "object",
             "required": [
                 "amount",
@@ -516,7 +533,7 @@
                 }
             }
         },
-        "voca-test_internal_models.TopUpRequest": {
+        "models.TopUpRequest": {
             "type": "object",
             "required": [
                 "amount",
@@ -531,7 +548,7 @@
                 }
             }
         },
-        "voca-test_internal_models.TransferRequest": {
+        "models.TransferRequest": {
             "type": "object",
             "required": [
                 "amount",
@@ -554,7 +571,7 @@
                 }
             }
         },
-        "voca-test_internal_models.User": {
+        "models.User": {
             "type": "object",
             "required": [
                 "name"
@@ -571,7 +588,7 @@
                 }
             }
         },
-        "voca-test_internal_models.UserCreateRequest": {
+        "models.UserCreateRequest": {
             "type": "object",
             "required": [
                 "name"
@@ -582,7 +599,7 @@
                 }
             }
         },
-        "voca-test_internal_models.Wallet": {
+        "models.Wallet": {
             "type": "object",
             "required": [
                 "currency"
@@ -612,7 +629,7 @@
                 }
             }
         },
-        "voca-test_internal_models.WalletCreateRequest": {
+        "models.WalletCreateRequest": {
             "type": "object",
             "required": [
                 "currency",
@@ -627,7 +644,7 @@
                 }
             }
         },
-        "voca-test_internal_util.APIResponse": {
+        "util.APIResponse": {
             "type": "object",
             "properties": {
                 "data": {
@@ -640,9 +657,57 @@
                     "description": "General message",
                     "type": "string"
                 },
+                "meta": {
+                    "description": "Pagination metadata",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/util.PaginationMeta"
+                        }
+                    ]
+                },
                 "status": {
                     "description": "\"success\" or \"error\"",
                     "type": "string"
+                }
+            }
+        },
+        "util.PaginationLinks": {
+            "type": "object",
+            "properties": {
+                "current": {
+                    "type": "string"
+                },
+                "first": {
+                    "type": "string"
+                },
+                "last": {
+                    "type": "string"
+                },
+                "next": {
+                    "type": "string"
+                },
+                "prev": {
+                    "type": "string"
+                }
+            }
+        },
+        "util.PaginationMeta": {
+            "type": "object",
+            "properties": {
+                "current_page": {
+                    "type": "integer"
+                },
+                "links": {
+                    "$ref": "#/definitions/util.PaginationLinks"
+                },
+                "per_page": {
+                    "type": "integer"
+                },
+                "total_items": {
+                    "type": "integer"
+                },
+                "total_pages": {
+                    "type": "integer"
                 }
             }
         }
